--- a/index.html
+++ b/index.html
@@ -1,171 +1,84 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Carrossel Cinematográfico</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            background-color: #1f1f1f;
-            padding: 40px;
-        }
-
-        h2 {
-            margin: 40px 0 20px;
-            color: white;
-            text-align: center;
-        }
-
-        /* container da imagem */
-        .img-wrapper {
-            width: 100%;
-            height: 380px;
-            overflow: hidden;
-            border-radius: 12px;
-        }
-
-        .img-wrapper img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        /* cards base */
-        .carousel-item:not(.active) .col-md-3 {
-            opacity: 0;
-            transform: translateX(60px);
-        }
-
-        .carousel-item.active .col-md-3 {
-            opacity: 1;
-            transform: translateX(0);
-            transition:
-                transform 0.6s cubic-bezier(0.22, 1, 0.36, 1),
-                opacity 0.6s ease;
-        }
-
-        /* evita animação dupla nos slides saindo */
-        .carousel-item.carousel-item-start .col-md-3,
-        .carousel-item.carousel-item-end .col-md-3 {
-            transition: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Carrossel Infinito</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div class="container">
+  <div class="carousel-container">
+    <div class="carousel-track" id="carouselTrack">
 
-    <h2>Brighton Walsh</h2>
-
-    <div id="carousel1" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-inner">
-
-            <!-- SLIDE 1 -->
-            <div class="carousel-item active">
-                <div class="row justify-content-center">
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro1-1.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro1-2.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro1-3.jpg">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SLIDE 2 -->
-            <div class="carousel-item">
-                <div class="row justify-content-center">
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro2-1.png">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro2-2.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro2-3.jpg">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- SLIDE 3 -->
-            <div class="carousel-item">
-                <div class="row justify-content-center">
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro3-1.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro3-2.jpg">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="img-wrapper">
-                            <img src="img/livro3-3.jpg">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro1-1.jpg" alt="">
         </div>
+      </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro2-1.png" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro3-1.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro1-1.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro2-1.png" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro3-1.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro1-1.jpg" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro2-1.png" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro3-1.jpg" alt="">
+        </div>
+      </div>
+      
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro2-1.png" alt="">
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="item-inner">
+          <img src="img/livro3-1.jpg" alt="">
+        </div>
+      </div>
+
     </div>
-</div>
+  </div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-
-    const carousel = document.getElementById('carousel1');
-    if (!carousel) return;
-
-    carousel.addEventListener('slide.bs.carousel', (event) => {
-
-        // somente quando clicar para a direita (NEXT)
-        if (event.direction === 'left') {
-
-            const nextSlide = event.relatedTarget;
-            const cards = Array.from(nextSlide.querySelectorAll('.col-md-3'));
-
-            // ordem: direita → meio → esquerda
-            const order = [2, 1, 0];
-
-            order.forEach((pos, i) => {
-                cards[pos].style.transitionDelay = `${0.05 + i * 0.15}s`;
-            });
-        }
-    });
-
-});
-</script>
-
+  <script src="script.js"></script>
 </body>
 </html>
