--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
     </div>
   </div>
 
+  <div class="modal-overlay" id="imageModal">
+    <div class="modal-content">
+        <button class="modal-close" id="modalClose">✕</button>
+        <img id="modalImage" src="" alt="">
+    </div>
+  </div>
+
   <script src="script.js"></script>
+
+  
+
+
 </body>
 </html>
